Fix app modal overflow
Hide app modal overflow (x), as we sometimes get an ugly horizontal
scrollbar in IE even though it's not needed.

Partially cloese mesosphere/marathon#3659

--- a/src/css/components/app-modal.less
+++ b/src/css/components/app-modal.less
@@ -30,6 +30,7 @@
 
     .modal-body {
       height: calc(~"80vh" - (@modal-header-height+@modal-footer-height));
+      overflow-x: hidden;
       padding: 0;
     }
 
